[package]
name = "elf"
version = "1.0.1"
authors = ["sanfusu <sanfusu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
elface = { version = "0.1", path = "elface" }

[lib]
crate-type = ["rlib"]

[workspace]
members = ["elface"]
